--- a/projectmovie/src/App.css
+++ b/projectmovie/src/App.css
@@ -30,15 +30,13 @@ ul {
   padding-bottom: 0;
   padding-top: 0;
 }
-.ant-back-top-icon {
-  background-color: wheat;
-  transition: all 0.5s;
+.ant-back-top{
+  transition: all .5s;
 }
-.ant-back-top-content {
-  transition: all 0.5s;
-}
-.ant-back-top-content:hover {
+.ant-back-top:hover{
+  border-radius: 5px;
   transform: scale(1.5);
+  box-shadow: 0px 0px 20px 3px rgba(0,0,0,0.82);
 }
 .App {
   /* background-image: url(./asset/img/bg/death-stranding_gp02.jpg); */
@@ -48,9 +46,14 @@ ul {
   background-position: center; */
 }
 
-.ant-back-top-content:hover {
-  transform: scale(1.5);
-}
 .App a {
   text-decoration: none;
+}
+
+/* USERTEMPLATE */
+.user_bg{
+  background-image: url(../src/asset/img/bg/Original\ Wallpaper\ _\ 3673x1954.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
